--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "jest": "^28.1.1",
     "lint-staged": "^13.0.2",
     "standard": "^17.0.0"
+  },
+  "dependencies": {
+    "@shelf/jest-mongodb": "^3.0.1",
+    "mongodb": "^4.7.0"
   }
 }
