--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
     "lint-staged": "^13.0.2",
